--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-success" type="submit" id="submitEvent">Search</button>
                 </form>
             </div>
         </div>
     </nav>
 
 <container >
-    <h1 class="text-center">Weather of  Hyderabad</h1>
+    <h1 class="text-center">Weather of  <span id="cityName"> </span></h1>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
             <div class="card mb-4 rounded-3 shadow-sm">
@@ -61,7 +61,7 @@
                     <h4 class="my-0 fw-normal">Temparature</h4>
                 </div>
                 <div class="card-body">
-                    <!-- <h1 class="card-title pricing-card-title"><small class="text-body-secondary fw-light"></small> -->
+                    <h1 class="card-title pricing-card-title"><span id="temp2"></span><span>&#8451;</span></small>
                     </h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>Temparature is<span id="temp"></span></li>
@@ -78,10 +78,10 @@
                     <h4 class="my-0 fw-normal">Pro</h4>
                 </div>
                 <div class="card-body">
-                    <!-- <h1 class="card-title pricing-card-title"><small class="text-body-secondary fw-light"></small> -->
+                    <h1 class="card-title pricing-card-title"><span id="humidity2"></span><span>%</span>
                     </h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Cloud PCT is<span id="cloud_pct"></span></li>
+                        <li>Wind Degree<span id="wind_degrees"></span></li>
                         <li>Feels like<span id="feels_like"></span></li>
                         <li>Humidity : <span id="humidity"></span></li>
                     </ul>
@@ -95,10 +95,10 @@
                     <h4 class="my-0 fw-normal">Wind and Sun Info</h4>
                 </div>
                 <div class="card-body">
-                    <!-- <h1 class="card-title pricing-card-title"><small class="text-body-secondary fw-light"></small> -->
+                    <h1 class="card-title pricing-card-title"><span id="wind_speed2"></span><span>Km/hr</span>
                     </h1>
                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>Wind Degree<span id="wind_degrees"></span></li>
+                        
                         <li>Wind Speed is <span id="wind_speed"></span></li>
                         <li>Sunrise Time <span id="sunrise"></span></li>
                         <li>Sunset Time <span id="sunset"></span></li>
@@ -109,7 +109,7 @@
         </div>
     </div>
 
-    <h2 class="display-6 text-center mb-4">Another City's</h2>
+    <!-- <h2 class="display-6 text-center mb-4">Another City's</h2>
 
     <div class="table-responsive">
         <table class="table text-center">
@@ -187,7 +187,7 @@
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 </container>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
